--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">Double Talk</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="channel_id">NewMessage</string>
+    <string name="channel_name">New message</string>
+    <string name="channel_description">Thông báo cho tin nhắn mới</string>
 </resources>
